@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -17,7 +17,6 @@
 package org.springframework.beans.factory.support;
 
 import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -26,31 +25,35 @@ import java.util.AbstractCollection;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import org.springframework.beans.PropertyEditorRegistrar;
-import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.factory.BeanCreationException;
+import org.springframework.beans.factory.NoUniqueBeanDefinitionException;
+import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.config.TypedStringValue;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.beans.propertyeditors.CustomNumberEditor;
+import org.springframework.beans.testfixture.beans.GenericBean;
+import org.springframework.beans.testfixture.beans.GenericIntegerBean;
+import org.springframework.beans.testfixture.beans.GenericSetOfIntegerBean;
+import org.springframework.beans.testfixture.beans.TestBean;
+import org.springframework.core.OverridingClassLoader;
 import org.springframework.core.ResolvableType;
+import org.springframework.core.annotation.AnnotationAwareOrderComparator;
+import org.springframework.core.annotation.Order;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.UrlResource;
-import org.springframework.tests.Assume;
-import org.springframework.tests.TestGroup;
-import org.springframework.tests.sample.beans.GenericBean;
-import org.springframework.tests.sample.beans.GenericIntegerBean;
-import org.springframework.tests.sample.beans.GenericSetOfIntegerBean;
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.core.testfixture.EnabledForTestGroups;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.springframework.core.testfixture.TestGroup.LONG_RUNNING;
 
 /**
  * @author Juergen Hoeller
@@ -58,10 +61,10 @@ import static org.junit.Assert.*;
  * @author Sam Brannen
  * @since 20.01.2006
  */
-public class BeanFactoryGenericsTests {
+class BeanFactoryGenericsTests {
 
 	@Test
-	public void testGenericSetProperty() {
+	void testGenericSetProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -73,12 +76,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericListProperty() throws MalformedURLException {
+	void testGenericListProperty() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -90,12 +93,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericListPropertyWithAutowiring() throws MalformedURLException {
+	void testGenericListPropertyWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -105,12 +108,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("genericBean");
 
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericListPropertyWithInvalidElementType() {
+	void testGenericListPropertyWithInvalidElementType() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericIntegerBean.class);
 
@@ -119,18 +122,16 @@ public class BeanFactoryGenericsTests {
 		rbd.getPropertyValues().add("testBeanList", input);
 
 		bf.registerBeanDefinition("genericBean", rbd);
-		try {
-			bf.getBean("genericBean");
-			fail("Should have thrown BeanCreationException");
-		}
-		catch (BeanCreationException ex) {
-			assertTrue(ex.getMessage().contains("genericBean") && ex.getMessage().contains("testBeanList[0]"));
-			assertTrue(ex.getMessage().contains(TestBean.class.getName()) && ex.getMessage().contains("Integer"));
-		}
+		assertThatExceptionOfType(BeanCreationException.class).isThrownBy(() ->
+				bf.getBean("genericBean"))
+			.withMessageContaining("genericBean")
+			.withMessageContaining("testBeanList[0]")
+			.withMessageContaining(TestBean.class.getName())
+			.withMessageContaining("Integer");
 	}
 
 	@Test
-	public void testGenericListPropertyWithOptionalAutowiring() throws MalformedURLException {
+	void testGenericListPropertyWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -138,11 +139,11 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertNull(gb.getResourceList());
+		assertThat(gb.getResourceList()).isNull();
 	}
 
 	@Test
-	public void testGenericMapProperty() {
+	void testGenericMapProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -154,27 +155,27 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericListOfArraysProperty() throws MalformedURLException {
+	void testGenericListOfArraysProperty() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("listOfArrays");
 
-		assertEquals(1, gb.getListOfArrays().size());
+		assertThat(gb.getListOfArrays().size()).isEqualTo(1);
 		String[] array = gb.getListOfArrays().get(0);
-		assertEquals(2, array.length);
-		assertEquals("value1", array[0]);
-		assertEquals("value2", array[1]);
+		assertThat(array).hasSize(2);
+		assertThat(array[0]).isEqualTo("value1");
+		assertThat(array[1]).isEqualTo("value2");
 	}
 
 
 	@Test
-	public void testGenericSetConstructor() {
+	void testGenericSetConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -186,27 +187,27 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetConstructorWithAutowiring() {
+	void testGenericSetConstructorWithAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", new Integer(4));
-		bf.registerSingleton("integer2", new Integer(5));
+		bf.registerSingleton("integer1", 4);
+		bf.registerSingleton("integer2", 5);
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setAutowireMode(RootBeanDefinition.AUTOWIRE_CONSTRUCTOR);
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetConstructorWithOptionalAutowiring() {
+	void testGenericSetConstructorWithOptionalAutowiring() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
@@ -214,11 +215,11 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertNull(gb.getIntegerSet());
+		assertThat(gb.getIntegerSet()).isNull();
 	}
 
 	@Test
-	public void testGenericSetListConstructor() throws MalformedURLException {
+	void testGenericSetListConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -234,17 +235,17 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithAutowiring() throws MalformedURLException {
+	void testGenericSetListConstructorWithAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.registerSingleton("integer1", new Integer(4));
-		bf.registerSingleton("integer2", new Integer(5));
+		bf.registerSingleton("integer1", 4);
+		bf.registerSingleton("integer2", 5);
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
 
@@ -253,14 +254,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetListConstructorWithOptionalAutowiring() throws MalformedURLException {
+	void testGenericSetListConstructorWithOptionalAutowiring() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerSingleton("resource1", new UrlResource("http://localhost:8080"));
 		bf.registerSingleton("resource2", new UrlResource("http://localhost:9090"));
@@ -270,12 +271,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertNull(gb.getIntegerSet());
-		assertNull(gb.getResourceList());
+		assertThat(gb.getIntegerSet()).isNull();
+		assertThat(gb.getResourceList()).isNull();
 	}
 
 	@Test
-	public void testGenericSetMapConstructor() throws MalformedURLException {
+	void testGenericSetMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -291,14 +292,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceConstructor() throws MalformedURLException {
+	void testGenericMapResourceConstructor() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -311,13 +312,13 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapConstructor() throws MalformedURLException {
+	void testGenericMapMapConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -333,17 +334,17 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertNotSame(gb.getPlainMap(), gb.getShortMap());
-		assertEquals(2, gb.getPlainMap().size());
-		assertEquals("0", gb.getPlainMap().get("1"));
-		assertEquals("3", gb.getPlainMap().get("2"));
-		assertEquals(2, gb.getShortMap().size());
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
+		assertThat(gb.getPlainMap()).hasSize(2);
+		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
+		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
+		assertThat(gb.getShortMap().size()).isEqualTo(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndConversion() throws MalformedURLException {
+	void testGenericMapMapConstructorWithSameRefAndConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -356,37 +357,37 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertNotSame(gb.getPlainMap(), gb.getShortMap());
-		assertEquals(2, gb.getPlainMap().size());
-		assertEquals("0", gb.getPlainMap().get("1"));
-		assertEquals("3", gb.getPlainMap().get("2"));
-		assertEquals(2, gb.getShortMap().size());
-		assertEquals(new Integer(0), gb.getShortMap().get(new Short("1")));
-		assertEquals(new Integer(3), gb.getShortMap().get(new Short("2")));
+		assertThat(gb.getShortMap()).isNotSameAs(gb.getPlainMap());
+		assertThat(gb.getPlainMap()).hasSize(2);
+		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
+		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
+		assertThat(gb.getShortMap().size()).isEqualTo(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapMapConstructorWithSameRefAndNoConversion() throws MalformedURLException {
+	void testGenericMapMapConstructorWithSameRefAndNoConversion() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<Short, Integer> input = new HashMap<>();
-		input.put(new Short((short) 1), new Integer(0));
-		input.put(new Short((short) 2), new Integer(3));
+		input.put((short) 1, 0);
+		input.put((short) 2, 3);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(input);
 
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertSame(gb.getPlainMap(), gb.getShortMap());
-		assertEquals(2, gb.getShortMap().size());
-		assertEquals(new Integer(0), gb.getShortMap().get(new Short("1")));
-		assertEquals(new Integer(3), gb.getShortMap().get(new Short("2")));
+		assertThat(gb.getShortMap()).isSameAs(gb.getPlainMap());
+		assertThat(gb.getShortMap()).hasSize(2);
+		assertThat(gb.getShortMap().get(Short.valueOf("1"))).isEqualTo(0);
+		assertThat(gb.getShortMap().get(Short.valueOf("2"))).isEqualTo(3);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeConstructor() throws MalformedURLException {
+	void testGenericMapWithKeyTypeConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
@@ -398,24 +399,19 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals("5", gb.getLongMap().get(new Long("4")));
-		assertEquals("7", gb.getLongMap().get(new Long("6")));
+		assertThat(gb.getLongMap().get(4L)).isEqualTo("5");
+		assertThat(gb.getLongMap().get(6L)).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueConstructor() throws MalformedURLException {
+	void testGenericMapWithCollectionValueConstructor() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
-			@Override
-			public void registerCustomEditors(PropertyEditorRegistry registry) {
-				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-			}
-		});
+		bf.addPropertyEditorRegistrar(registry -> registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
+		value1.add(1);
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
@@ -426,13 +422,15 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
-		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
+		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
+		assertThat(condition1).isTrue();
+		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
+		assertThat(condition).isTrue();
 	}
 
 
 	@Test
-	public void testGenericSetFactoryMethod() {
+	void testGenericSetFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -445,12 +443,12 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
 	}
 
 	@Test
-	public void testGenericSetListFactoryMethod() throws MalformedURLException {
+	void testGenericSetListFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -467,14 +465,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
-		assertEquals(new UrlResource("http://localhost:9090"), gb.getResourceList().get(1));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
+		assertThat(gb.getResourceList().get(1)).isEqualTo(new UrlResource("http://localhost:9090"));
 	}
 
 	@Test
-	public void testGenericSetMapFactoryMethod() throws MalformedURLException {
+	void testGenericSetMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -491,14 +489,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getIntegerSet().contains(new Integer(4)));
-		assertTrue(gb.getIntegerSet().contains(new Integer(5)));
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getIntegerSet().contains(4)).isTrue();
+		assertThat(gb.getIntegerSet().contains(5)).isTrue();
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapResourceFactoryMethod() throws MalformedURLException {
+	void testGenericMapResourceFactoryMethod() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -512,13 +510,13 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
-		assertEquals(new UrlResource("http://localhost:8080"), gb.getResourceList().get(0));
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getResourceList().get(0)).isEqualTo(new UrlResource("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapMapFactoryMethod() throws MalformedURLException {
+	void testGenericMapMapFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -535,14 +533,14 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals("0", gb.getPlainMap().get("1"));
-		assertEquals("3", gb.getPlainMap().get("2"));
-		assertEquals(new Integer(5), gb.getShortMap().get(new Short("4")));
-		assertEquals(new Integer(7), gb.getShortMap().get(new Short("6")));
+		assertThat(gb.getPlainMap().get("1")).isEqualTo("0");
+		assertThat(gb.getPlainMap().get("2")).isEqualTo("3");
+		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
 	}
 
 	@Test
-	public void testGenericMapWithKeyTypeFactoryMethod() throws MalformedURLException {
+	void testGenericMapWithKeyTypeFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
@@ -555,25 +553,20 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertEquals("5", gb.getLongMap().get(new Long("4")));
-		assertEquals("7", gb.getLongMap().get(new Long("6")));
+		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(Long.valueOf("6"))).isEqualTo("7");
 	}
 
 	@Test
-	public void testGenericMapWithCollectionValueFactoryMethod() throws MalformedURLException {
+	void testGenericMapWithCollectionValueFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
-		bf.addPropertyEditorRegistrar(new PropertyEditorRegistrar() {
-			@Override
-			public void registerCustomEditors(PropertyEditorRegistry registry) {
-				registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
-			}
-		});
+		bf.addPropertyEditorRegistrar(registry -> registry.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false)));
 		RootBeanDefinition rbd = new RootBeanDefinition(GenericBean.class);
 		rbd.setFactoryMethodName("createInstance");
 
 		Map<String, AbstractCollection<?>> input = new HashMap<>();
 		HashSet<Integer> value1 = new HashSet<>();
-		value1.add(new Integer(1));
+		value1.add(1);
 		input.put("1", value1);
 		ArrayList<Boolean> value2 = new ArrayList<>();
 		value2.add(Boolean.TRUE);
@@ -584,73 +577,74 @@ public class BeanFactoryGenericsTests {
 		bf.registerBeanDefinition("genericBean", rbd);
 		GenericBean<?> gb = (GenericBean<?>) bf.getBean("genericBean");
 
-		assertTrue(gb.getCollectionMap().get(new Integer(1)) instanceof HashSet);
-		assertTrue(gb.getCollectionMap().get(new Integer(2)) instanceof ArrayList);
+		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
+		assertThat(condition1).isTrue();
+		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	public void testGenericListBean() throws Exception {
+	void testGenericListBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		List<?> list = (List<?>) bf.getBean("list");
-		assertEquals(1, list.size());
-		assertEquals(new URL("http://localhost:8080"), list.get(0));
+		assertThat(list.size()).isEqualTo(1);
+		assertThat(list.get(0)).isEqualTo(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericSetBean() throws Exception {
+	void testGenericSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		Set<?> set = (Set<?>) bf.getBean("set");
-		assertEquals(1, set.size());
-		assertEquals(new URL("http://localhost:8080"), set.iterator().next());
+		assertThat(set.size()).isEqualTo(1);
+		assertThat(set.iterator().next()).isEqualTo(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericMapBean() throws Exception {
+	void testGenericMapBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		Map<?, ?> map = (Map<?, ?>) bf.getBean("map");
-		assertEquals(1, map.size());
-		assertEquals(new Integer(10), map.keySet().iterator().next());
-		assertEquals(new URL("http://localhost:8080"), map.values().iterator().next());
+		assertThat(map).hasSize(1);
+		assertThat(map.keySet().iterator().next()).isEqualTo(10);
+		assertThat(map.values().iterator().next()).isEqualTo(new URL("http://localhost:8080"));
 	}
 
 	@Test
-	public void testGenericallyTypedIntegerBean() throws Exception {
+	void testGenericallyTypedIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericIntegerBean gb = (GenericIntegerBean) bf.getBean("integerBean");
-		assertEquals(new Integer(10), gb.getGenericProperty());
-		assertEquals(new Integer(20), gb.getGenericListProperty().get(0));
-		assertEquals(new Integer(30), gb.getGenericListProperty().get(1));
+		assertThat(gb.getGenericProperty()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty().get(0)).isEqualTo(20);
+		assertThat(gb.getGenericListProperty().get(1)).isEqualTo(30);
 	}
 
 	@Test
-	public void testGenericallyTypedSetOfIntegerBean() throws Exception {
+	void testGenericallyTypedSetOfIntegerBean() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		GenericSetOfIntegerBean gb = (GenericSetOfIntegerBean) bf.getBean("setOfIntegerBean");
-		assertEquals(new Integer(10), gb.getGenericProperty().iterator().next());
-		assertEquals(new Integer(20), gb.getGenericListProperty().get(0).iterator().next());
-		assertEquals(new Integer(30), gb.getGenericListProperty().get(1).iterator().next());
+		assertThat(gb.getGenericProperty().iterator().next()).isEqualTo(10);
+		assertThat(gb.getGenericListProperty().get(0).iterator().next()).isEqualTo(20);
+		assertThat(gb.getGenericListProperty().get(1).iterator().next()).isEqualTo(30);
 	}
 
 	@Test
-	public void testSetBean() throws Exception {
-		Assume.group(TestGroup.LONG_RUNNING);
-
+	@EnabledForTestGroups(LONG_RUNNING)
+	void testSetBean() throws Exception {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		new XmlBeanDefinitionReader(bf).loadBeanDefinitions(
 				new ClassPathResource("genericBeanTests.xml", getClass()));
 		UrlSet us = (UrlSet) bf.getBean("setBean");
-		assertEquals(1, us.size());
-		assertEquals(new URL("http://www.springframework.org"), us.iterator().next());
+		assertThat(us.size()).isEqualTo(1);
+		assertThat(us.iterator().next()).isEqualTo(new URL("https://www.springframework.org"));
 	}
 
 	/**
@@ -664,7 +658,7 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-9493
 	 */
 	@Test
-	public void parameterizedStaticFactoryMethod() {
+	void parameterizedStaticFactoryMethod() {
 		RootBeanDefinition rbd = new RootBeanDefinition(Mockito.class);
 		rbd.setFactoryMethodName("mock");
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
@@ -672,8 +666,10 @@ public class BeanFactoryGenericsTests {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.registerBeanDefinition("mock", rbd);
 
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	/**
@@ -688,7 +684,7 @@ public class BeanFactoryGenericsTests {
 	 * <p>See SPR-10411
 	 */
 	@Test
-	public void parameterizedInstanceFactoryMethod() {
+	void parameterizedInstanceFactoryMethod() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -700,12 +696,16 @@ public class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
 		bf.registerBeanDefinition("mock", rbd);
 
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
+	void parameterizedInstanceFactoryMethodWithNonResolvedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -717,12 +717,16 @@ public class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class.getName());
 		bf.registerBeanDefinition("mock", rbd);
 
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithWrappedClassName() {
+	void parameterizedInstanceFactoryMethodWithWrappedClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition();
@@ -732,12 +736,16 @@ public class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue(new TypedStringValue(Runnable.class.getName()));
 		bf.registerBeanDefinition("mock", rbd);
 
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithInvalidClassName() {
+	void parameterizedInstanceFactoryMethodWithInvalidClassName() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -749,12 +757,16 @@ public class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addGenericArgumentValue("x");
 		bf.registerBeanDefinition("mock", rbd);
 
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isFalse();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isFalse();
+		assertThat(bf.getType("mock")).isNull();
+		assertThat(bf.getType("mock")).isNull();
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(0, beans.size());
+		assertThat(beans).hasSize(0);
 	}
 
 	@Test
-	public void parameterizedInstanceFactoryMethodWithIndexedArgument() {
+	void parameterizedInstanceFactoryMethodWithIndexedArgument() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 
 		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
@@ -766,12 +778,38 @@ public class BeanFactoryGenericsTests {
 		rbd.getConstructorArgumentValues().addIndexedArgumentValue(0, Runnable.class);
 		bf.registerBeanDefinition("mock", rbd);
 
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
 		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
-		assertEquals(1, beans.size());
+		assertThat(beans).hasSize(1);
+	}
+
+	@Test  // SPR-16720
+	void parameterizedInstanceFactoryMethodWithTempClassLoader() {
+		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
+		bf.setTempClassLoader(new OverridingClassLoader(getClass().getClassLoader()));
+
+		RootBeanDefinition rbd = new RootBeanDefinition(MocksControl.class);
+		bf.registerBeanDefinition("mocksControl", rbd);
+
+		rbd = new RootBeanDefinition();
+		rbd.setFactoryBeanName("mocksControl");
+		rbd.setFactoryMethodName("createMock");
+		rbd.getConstructorArgumentValues().addGenericArgumentValue(Runnable.class);
+		bf.registerBeanDefinition("mock", rbd);
+
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.isTypeMatch("mock", Runnable.class)).isTrue();
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		assertThat(bf.getType("mock")).isEqualTo(Runnable.class);
+		Map<String, Runnable> beans = bf.getBeansOfType(Runnable.class);
+		assertThat(beans).hasSize(1);
 	}
 
 	@Test
-	public void testGenericMatchingWithBeanNameDifferentiation() {
+	void testGenericMatchingWithBeanNameDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
@@ -781,48 +819,134 @@ public class BeanFactoryGenericsTests {
 				new RootBeanDefinition(NumberBean.class, RootBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
 
 		NumberBean nb = bf.getBean(NumberBean.class);
-		assertSame(bf.getBean("doubleStore"), nb.getDoubleStore());
-		assertSame(bf.getBean("floatStore"), nb.getFloatStore());
+		assertThat(nb.getDoubleStore()).isSameAs(bf.getBean("doubleStore"));
+		assertThat(nb.getFloatStore()).isSameAs(bf.getBean("floatStore"));
 
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertEquals(2, numberStoreNames.length);
-		assertEquals("doubleStore", numberStoreNames[0]);
-		assertEquals("floatStore", numberStoreNames[1]);
-		assertEquals(0, doubleStoreNames.length);
-		assertEquals(0, floatStoreNames.length);
+		assertThat(numberStoreNames).hasSize(2);
+		assertThat(numberStoreNames[0]).isEqualTo("doubleStore");
+		assertThat(numberStoreNames[1]).isEqualTo("floatStore");
+		assertThat(doubleStoreNames).hasSize(0);
+		assertThat(floatStoreNames).hasSize(0);
 	}
 
 	@Test
-	public void testGenericMatchingWithFullTypeDifferentiation() {
+	void testGenericMatchingWithFullTypeDifferentiation() {
 		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
+		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
 		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
 
-		bf.registerBeanDefinition("store1", new RootBeanDefinition(DoubleStore.class));
-		bf.registerBeanDefinition("store2", new RootBeanDefinition(FloatStore.class));
+		RootBeanDefinition bd1 = new RootBeanDefinition(NumberStoreFactory.class);
+		bd1.setFactoryMethodName("newDoubleStore");
+		bf.registerBeanDefinition("store1", bd1);
+		RootBeanDefinition bd2 = new RootBeanDefinition(NumberStoreFactory.class);
+		bd2.setFactoryMethodName("newFloatStore");
+		bf.registerBeanDefinition("store2", bd2);
 		bf.registerBeanDefinition("numberBean",
 				new RootBeanDefinition(NumberBean.class, RootBeanDefinition.AUTOWIRE_CONSTRUCTOR, false));
 
 		NumberBean nb = bf.getBean(NumberBean.class);
-		assertSame(bf.getBean("store1"), nb.getDoubleStore());
-		assertSame(bf.getBean("store2"), nb.getFloatStore());
+		assertThat(nb.getDoubleStore()).isSameAs(bf.getBean("store1"));
+		assertThat(nb.getFloatStore()).isSameAs(bf.getBean("store2"));
 
 		String[] numberStoreNames = bf.getBeanNamesForType(ResolvableType.forClass(NumberStore.class));
 		String[] doubleStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
 		String[] floatStoreNames = bf.getBeanNamesForType(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
-		assertEquals(2, numberStoreNames.length);
-		assertEquals("store1", numberStoreNames[0]);
-		assertEquals("store2", numberStoreNames[1]);
-		assertEquals(1, doubleStoreNames.length);
-		assertEquals("store1", doubleStoreNames[0]);
-		assertEquals(1, floatStoreNames.length);
-		assertEquals("store2", floatStoreNames[0]);
+		assertThat(numberStoreNames).hasSize(2);
+		assertThat(numberStoreNames[0]).isEqualTo("store1");
+		assertThat(numberStoreNames[1]).isEqualTo("store2");
+		assertThat(doubleStoreNames).hasSize(1);
+		assertThat(doubleStoreNames[0]).isEqualTo("store1");
+		assertThat(floatStoreNames).hasSize(1);
+		assertThat(floatStoreNames[0]).isEqualTo("store2");
+
+		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
+		ObjectProvider<NumberStore<Double>> doubleStoreProvider = bf.getBeanProvider(ResolvableType.forClassWithGenerics(NumberStore.class, Double.class));
+		ObjectProvider<NumberStore<Float>> floatStoreProvider = bf.getBeanProvider(ResolvableType.forClassWithGenerics(NumberStore.class, Float.class));
+		assertThatExceptionOfType(NoUniqueBeanDefinitionException.class).isThrownBy(numberStoreProvider::getObject);
+		assertThatExceptionOfType(NoUniqueBeanDefinitionException.class).isThrownBy(numberStoreProvider::getIfAvailable);
+		assertThat(numberStoreProvider.getIfUnique()).isNull();
+		assertThat(doubleStoreProvider.getObject()).isSameAs(bf.getBean("store1"));
+		assertThat(doubleStoreProvider.getIfAvailable()).isSameAs(bf.getBean("store1"));
+		assertThat(doubleStoreProvider.getIfUnique()).isSameAs(bf.getBean("store1"));
+		assertThat(floatStoreProvider.getObject()).isSameAs(bf.getBean("store2"));
+		assertThat(floatStoreProvider.getIfAvailable()).isSameAs(bf.getBean("store2"));
+		assertThat(floatStoreProvider.getIfUnique()).isSameAs(bf.getBean("store2"));
+
+		List<NumberStore<?>> resolved = new ArrayList<>();
+		for (NumberStore<?> instance : numberStoreProvider) {
+			resolved.add(instance);
+		}
+		assertThat(resolved.size()).isEqualTo(2);
+		assertThat(resolved.get(0)).isSameAs(bf.getBean("store1"));
+		assertThat(resolved.get(1)).isSameAs(bf.getBean("store2"));
+
+		resolved = numberStoreProvider.stream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(2);
+		assertThat(resolved.get(0)).isSameAs(bf.getBean("store1"));
+		assertThat(resolved.get(1)).isSameAs(bf.getBean("store2"));
+
+		resolved = numberStoreProvider.orderedStream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(2);
+		assertThat(resolved.get(0)).isSameAs(bf.getBean("store2"));
+		assertThat(resolved.get(1)).isSameAs(bf.getBean("store1"));
+
+		resolved = new ArrayList<>();
+		for (NumberStore<Double> instance : doubleStoreProvider) {
+			resolved.add(instance);
+		}
+		assertThat(resolved.size()).isEqualTo(1);
+		assertThat(resolved.contains(bf.getBean("store1"))).isTrue();
+
+		resolved = doubleStoreProvider.stream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(1);
+		assertThat(resolved.contains(bf.getBean("store1"))).isTrue();
+
+		resolved = doubleStoreProvider.orderedStream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(1);
+		assertThat(resolved.contains(bf.getBean("store1"))).isTrue();
+
+		resolved = new ArrayList<>();
+		for (NumberStore<Float> instance : floatStoreProvider) {
+			resolved.add(instance);
+		}
+		assertThat(resolved.size()).isEqualTo(1);
+		assertThat(resolved.contains(bf.getBean("store2"))).isTrue();
+
+		resolved = floatStoreProvider.stream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(1);
+		assertThat(resolved.contains(bf.getBean("store2"))).isTrue();
+
+		resolved = floatStoreProvider.orderedStream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(1);
+		assertThat(resolved.contains(bf.getBean("store2"))).isTrue();
+	}
+
+	@Test
+	void testGenericMatchingWithUnresolvedOrderedStream() {
+		DefaultListableBeanFactory bf = new DefaultListableBeanFactory();
+		bf.setDependencyComparator(AnnotationAwareOrderComparator.INSTANCE);
+		bf.setAutowireCandidateResolver(new GenericTypeAwareAutowireCandidateResolver());
+
+		RootBeanDefinition bd1 = new RootBeanDefinition(NumberStoreFactory.class);
+		bd1.setFactoryMethodName("newDoubleStore");
+		bf.registerBeanDefinition("store1", bd1);
+		RootBeanDefinition bd2 = new RootBeanDefinition(NumberStoreFactory.class);
+		bd2.setFactoryMethodName("newFloatStore");
+		bf.registerBeanDefinition("store2", bd2);
+
+		ObjectProvider<NumberStore<?>> numberStoreProvider = bf.getBeanProvider(ResolvableType.forClass(NumberStore.class));
+		List<NumberStore<?>> resolved = numberStoreProvider.orderedStream().collect(Collectors.toList());
+		assertThat(resolved.size()).isEqualTo(2);
+		assertThat(resolved.get(0)).isSameAs(bf.getBean("store2"));
+		assertThat(resolved.get(1)).isSameAs(bf.getBean("store1"));
 	}
 
 
 	@SuppressWarnings("serial")
-	public static class NamedUrlList extends LinkedList<URL> {
+	public static class NamedUrlList extends ArrayList<URL> {
 	}
 
 
@@ -839,9 +963,9 @@ public class BeanFactoryGenericsTests {
 	public static class CollectionDependentBean {
 
 		public CollectionDependentBean(NamedUrlList list, NamedUrlSet set, NamedUrlMap map) {
-			assertEquals(1, list.size());
-			assertEquals(1, set.size());
-			assertEquals(1, map.size());
+			assertThat(list.size()).isEqualTo(1);
+			assertThat(set.size()).isEqualTo(1);
+			assertThat(map.size()).isEqualTo(1);
 		}
 	}
 
@@ -873,11 +997,8 @@ public class BeanFactoryGenericsTests {
 		@SuppressWarnings("unchecked")
 		public <T> T createMock(Class<T> toMock) {
 			return (T) Proxy.newProxyInstance(BeanFactoryGenericsTests.class.getClassLoader(), new Class<?>[] {toMock},
-					new InvocationHandler() {
-						@Override
-						public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-							throw new UnsupportedOperationException("mocked!");
-						}
+					(InvocationHandler) (proxy, method, args) -> {
+						throw new UnsupportedOperationException("mocked!");
 					});
 		}
 	}
@@ -912,6 +1033,20 @@ public class BeanFactoryGenericsTests {
 
 		public NumberStore<Float> getFloatStore() {
 			return this.floatStore;
+		}
+	}
+
+
+	public static class NumberStoreFactory {
+
+		@Order(1)
+		public static NumberStore<Double> newDoubleStore() {
+			return new DoubleStore();
+		}
+
+		@Order(0)
+		public static NumberStore<Float> newFloatStore() {
+			return new FloatStore();
 		}
 	}
 
