@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2013 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,8 +18,8 @@ package org.springframework.jms.listener.adapter;
 
 import java.io.ByteArrayInputStream;
 import java.io.Serializable;
+
 import javax.jms.BytesMessage;
-import javax.jms.IllegalStateException;
 import javax.jms.InvalidDestinationException;
 import javax.jms.JMSException;
 import javax.jms.Message;
@@ -31,26 +31,30 @@ import javax.jms.QueueSession;
 import javax.jms.Session;
 import javax.jms.TextMessage;
 
-import org.junit.Test;
-import org.mockito.invocation.InvocationOnMock;
+import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.jms.support.converter.MessageConversionException;
 import org.springframework.jms.support.converter.SimpleMessageConverter;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.willThrow;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
  * @author Rick Evans
  * @author Juergen Hoeller
  * @author Chris Beams
  */
-public class MessageListenerAdapterTests {
+class MessageListenerAdapterTests {
 
 	private static final String TEXT = "I fancy a good cuppa right now";
 
-	private static final Integer NUMBER = new Integer(1);
+	private static final Integer NUMBER = 1;
 
 	private static final SerializableObject OBJECT = new SerializableObject();
 
@@ -60,7 +64,7 @@ public class MessageListenerAdapterTests {
 
 
 	@Test
-	public void testWithMessageContentsDelegateForTextMessage() throws Exception {
+	void testWithMessageContentsDelegateForTextMessage() throws Exception {
 		TextMessage textMessage = mock(TextMessage.class);
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
@@ -74,17 +78,14 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForBytesMessage() throws Exception {
+	void testWithMessageContentsDelegateForBytesMessage() throws Exception {
 		BytesMessage bytesMessage = mock(BytesMessage.class);
 		// BytesMessage contents must be unwrapped...
-		given(bytesMessage.getBodyLength()).willReturn(new Long(TEXT.getBytes().length));
-		given(bytesMessage.readBytes(any(byte[].class))).willAnswer(new Answer<Integer>() {
-			@Override
-			public Integer answer(InvocationOnMock invocation) throws Throwable {
-				byte[] bytes = (byte[]) invocation.getArguments()[0];
-				ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
-				return inputStream.read(bytes);
-			}
+		given(bytesMessage.getBodyLength()).willReturn(Long.valueOf(TEXT.getBytes().length));
+		given(bytesMessage.readBytes(any(byte[].class))).willAnswer((Answer<Integer>) invocation -> {
+			byte[] bytes = (byte[]) invocation.getArguments()[0];
+			ByteArrayInputStream inputStream = new ByteArrayInputStream(TEXT.getBytes());
+			return inputStream.read(bytes);
 		});
 
 		MessageContentsDelegate delegate = mock(MessageContentsDelegate.class);
@@ -96,7 +97,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForObjectMessage() throws Exception {
+	void testWithMessageContentsDelegateForObjectMessage() throws Exception {
 		ObjectMessage objectMessage = mock(ObjectMessage.class);
 		given(objectMessage.getObject()).willReturn(NUMBER);
 
@@ -109,7 +110,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
+	void testWithMessageContentsDelegateForObjectMessageWithPlainObject() throws Exception {
 		ObjectMessage objectMessage = mock(ObjectMessage.class);
 		given(objectMessage.getObject()).willReturn(OBJECT);
 
@@ -122,7 +123,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithMessageDelegate() throws Exception {
+	void testWithMessageDelegate() throws Exception {
 		TextMessage textMessage = mock(TextMessage.class);
 
 		MessageDelegate delegate = mock(MessageDelegate.class);
@@ -136,18 +137,18 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
+	void testWhenTheAdapterItselfIsTheDelegate() throws Exception {
 		TextMessage textMessage = mock(TextMessage.class);
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
 
 		StubMessageListenerAdapter adapter = new StubMessageListenerAdapter();
 		adapter.onMessage(textMessage);
-		assertTrue(adapter.wasCalled());
+		assertThat(adapter.wasCalled()).isTrue();
 	}
 
 	@Test
-	public void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
+	void testRainyDayWithNoApplicableHandlingMethods() throws Exception {
 		TextMessage textMessage = mock(TextMessage.class);
 		// TextMessage contents must be unwrapped...
 		given(textMessage.getText()).willReturn(TEXT);
@@ -155,11 +156,11 @@ public class MessageListenerAdapterTests {
 		StubMessageListenerAdapter adapter = new StubMessageListenerAdapter();
 		adapter.setDefaultListenerMethod("walnutsRock");
 		adapter.onMessage(textMessage);
-		assertFalse(adapter.wasCalled());
+		assertThat(adapter.wasCalled()).isFalse();
 	}
 
 	@Test
-	public void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() throws Exception {
+	void testThatAnExceptionThrownFromTheHandlingMethodIsSimplySwallowedByDefault() throws Exception {
 		final IllegalArgumentException exception = new IllegalArgumentException();
 
 		TextMessage textMessage = mock(TextMessage.class);
@@ -169,13 +170,13 @@ public class MessageListenerAdapterTests {
 		MessageListenerAdapter adapter = new MessageListenerAdapter(delegate) {
 			@Override
 			protected void handleListenerException(Throwable ex) {
-				assertNotNull("The Throwable passed to the handleListenerException(..) method must never be null.", ex);
-				assertTrue("The Throwable passed to the handleListenerException(..) method must be of type [ListenerExecutionFailedException].",
-						ex instanceof ListenerExecutionFailedException);
+				assertThat(ex).as("The Throwable passed to the handleListenerException(..) method must never be null.").isNotNull();
+				boolean condition = ex instanceof ListenerExecutionFailedException;
+				assertThat(condition).as("The Throwable passed to the handleListenerException(..) method must be of type [ListenerExecutionFailedException].").isTrue();
 				ListenerExecutionFailedException lefx = (ListenerExecutionFailedException) ex;
 				Throwable cause = lefx.getCause();
-				assertNotNull("The cause of a ListenerExecutionFailedException must be preserved.", cause);
-				assertSame(exception, cause);
+				assertThat(cause).as("The cause of a ListenerExecutionFailedException must be preserved.").isNotNull();
+				assertThat(cause).isSameAs(exception);
 			}
 		};
 		// we DON'T want the default SimpleMessageConversion happening...
@@ -184,27 +185,27 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() throws Exception {
+	void testThatTheDefaultMessageConverterisIndeedTheSimpleMessageConverter() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
-		assertNotNull("The default [MessageConverter] must never be null.", adapter.getMessageConverter());
-		assertTrue("The default [MessageConverter] must be of the type [SimpleMessageConverter]",
-				adapter.getMessageConverter() instanceof SimpleMessageConverter);
+		assertThat(adapter.getMessageConverter()).as("The default [MessageConverter] must never be null.").isNotNull();
+		boolean condition = adapter.getMessageConverter() instanceof SimpleMessageConverter;
+		assertThat(condition).as("The default [MessageConverter] must be of the type [SimpleMessageConverter]").isTrue();
 	}
 
 	@Test
-	public void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() throws Exception {
+	void testThatWhenNoDelegateIsSuppliedTheDelegateIsAssumedToBeTheMessageListenerAdapterItself() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
-		assertSame(adapter, adapter.getDelegate());
+		assertThat(adapter.getDelegate()).isSameAs(adapter);
 	}
 
 	@Test
-	public void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() throws Exception {
+	void testThatTheDefaultMessageHandlingMethodNameIsTheConstantDefault() throws Exception {
 		MessageListenerAdapter adapter = new MessageListenerAdapter();
-		assertEquals(MessageListenerAdapter.ORIGINAL_DEFAULT_LISTENER_METHOD, adapter.getDefaultListenerMethod());
+		assertThat(adapter.getDefaultListenerMethod()).isEqualTo(MessageListenerAdapter.ORIGINAL_DEFAULT_LISTENER_METHOD);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() throws Exception {
+	void testWithResponsiveMessageDelegate_DoesNotSendReturnTextMessageIfNoSessionSupplied() throws Exception {
 		TextMessage textMessage = mock(TextMessage.class);
 		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
 		given(delegate.handleMessage(textMessage)).willReturn(TEXT);
@@ -216,7 +217,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+	void testWithResponsiveMessageDelegateWithDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
 		Queue destination = mock(Queue.class);
 		TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
@@ -251,7 +252,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
 		Queue destination = mock(Queue.class);
 		TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
@@ -284,7 +285,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
+	void testWithResponsiveMessageDelegateNoDefaultDestinationAndNoReplyToDestination_SendsReturnTextMessageWhenSessionSupplied() throws Exception {
 		final TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
 		given(sentTextMessage.getJMSCorrelationID()).willReturn(CORRELATION_ID);
@@ -304,20 +305,16 @@ public class MessageListenerAdapterTests {
 				return message;
 			}
 		};
-		try {
-			adapter.onMessage(sentTextMessage, session);
-			fail("expected CouldNotSendReplyException with InvalidDestinationException");
-		}
-		catch (ReplyFailureException ex) {
-			assertEquals(InvalidDestinationException.class, ex.getCause().getClass());
-		}
+		assertThatExceptionOfType(ReplyFailureException.class).isThrownBy(() ->
+				adapter.onMessage(sentTextMessage, session))
+			.withCauseExactlyInstanceOf(InvalidDestinationException.class);
 
 		verify(responseTextMessage).setJMSCorrelationID(CORRELATION_ID);
 		verify(delegate).handleMessage(sentTextMessage);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
+	void testWithResponsiveMessageDelegateNoDefaultDestination_SendsReturnTextMessageWhenSessionSupplied_AndSendingThrowsJMSException() throws Exception {
 		Queue destination = mock(Queue.class);
 
 		final TextMessage sentTextMessage = mock(TextMessage.class);
@@ -343,13 +340,9 @@ public class MessageListenerAdapterTests {
 				return message;
 			}
 		};
-		try {
-			adapter.onMessage(sentTextMessage, session);
-			fail("expected CouldNotSendReplyException with JMSException");
-		}
-		catch (ReplyFailureException ex) {
-			assertEquals(JMSException.class, ex.getCause().getClass());
-		}
+		assertThatExceptionOfType(ReplyFailureException.class).isThrownBy(() ->
+				adapter.onMessage(sentTextMessage, session))
+			.withCauseExactlyInstanceOf(JMSException.class);
 
 		verify(responseTextMessage).setJMSCorrelationID(CORRELATION_ID);
 		verify(messageProducer).close();
@@ -357,7 +350,7 @@ public class MessageListenerAdapterTests {
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() throws Exception {
+	void testWithResponsiveMessageDelegateDoesNotSendReturnTextMessageWhenSessionSupplied_AndListenerMethodThrowsException() throws Exception {
 		final TextMessage message = mock(TextMessage.class);
 		final QueueSession session = mock(QueueSession.class);
 
@@ -370,49 +363,12 @@ public class MessageListenerAdapterTests {
 				return message;
 			}
 		};
-		try {
-			adapter.onMessage(message, session);
-			fail("expected ListenerExecutionFailedException");
-		}
-		catch (ListenerExecutionFailedException ex) { /* expected */ }
+		assertThatExceptionOfType(ListenerExecutionFailedException.class).isThrownBy(() ->
+				adapter.onMessage(message, session));
 	}
 
 	@Test
-	public void testFailsIfNoDefaultListenerMethodNameIsSupplied() throws Exception {
-		final TextMessage message = mock(TextMessage.class);
-		given(message.getText()).willReturn(TEXT);
-
-		final MessageListenerAdapter adapter = new MessageListenerAdapter() {
-			@Override
-			protected void handleListenerException(Throwable ex) {
-				assertTrue(ex instanceof IllegalStateException);
-			}
-		};
-		adapter.setDefaultListenerMethod(null);
-		adapter.onMessage(message);
-	}
-
-	@Test
-	public void testFailsWhenOverriddenGetListenerMethodNameReturnsNull() throws Exception {
-		final TextMessage message = mock(TextMessage.class);
-		given(message.getText()).willReturn(TEXT);
-
-		final MessageListenerAdapter adapter = new MessageListenerAdapter() {
-			@Override
-			protected void handleListenerException(Throwable ex) {
-				assertTrue(ex instanceof javax.jms.IllegalStateException);
-			}
-			@Override
-			protected String getListenerMethodName(Message originalMessage, Object extractedMessage) {
-				return null;
-			}
-		};
-		adapter.setDefaultListenerMethod(null);
-		adapter.onMessage(message);
-	}
-
-	@Test
-	public void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+	void testWithResponsiveMessageDelegateWhenReturnTypeIsNotAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
 		final TextMessage sentTextMessage = mock(TextMessage.class);
 		final Session session = mock(Session.class);
 		ResponsiveMessageDelegate delegate = mock(ResponsiveMessageDelegate.class);
@@ -425,17 +381,13 @@ public class MessageListenerAdapterTests {
 			}
 		};
 		adapter.setMessageConverter(null);
-		try {
-			adapter.onMessage(sentTextMessage, session);
-			fail("expected CouldNotSendReplyException with MessageConversionException");
-		}
-		catch (ReplyFailureException ex) {
-			assertEquals(MessageConversionException.class, ex.getCause().getClass());
-		}
+		assertThatExceptionOfType(ReplyFailureException.class).isThrownBy(() ->
+				adapter.onMessage(sentTextMessage, session))
+			.withCauseExactlyInstanceOf(MessageConversionException.class);
 	}
 
 	@Test
-	public void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
+	void testWithResponsiveMessageDelegateWhenReturnTypeIsAJMSMessageAndNoMessageConverterIsSupplied() throws Exception {
 		Queue destination = mock(Queue.class);
 		final TextMessage sentTextMessage = mock(TextMessage.class);
 		// correlation ID is queried when response is being created...
