@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -22,41 +22,41 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
+
 import javax.jms.BytesMessage;
 import javax.jms.JMSException;
 import javax.jms.Session;
 import javax.jms.TextMessage;
 
 import com.fasterxml.jackson.annotation.JsonView;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-import org.mockito.invocation.InvocationOnMock;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.stubbing.Answer;
 
 import org.springframework.core.MethodParameter;
 
-import static org.junit.Assert.*;
-import static org.mockito.BDDMockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 /**
  * @author Arjen Poutsma
  * @author Dave Syer
  * @author Stephane Nicoll
  */
-public class MappingJackson2MessageConverterTests {
-
-	@Rule
-	public final ExpectedException thrown = ExpectedException.none();
+class MappingJackson2MessageConverterTests {
 
 	private MappingJackson2MessageConverter converter;
 
 	private Session sessionMock;
 
 
-	@Before
-	public void setUp() throws Exception {
+	@BeforeEach
+	public void setup() {
 		sessionMock = mock(Session.class);
 		converter = new MappingJackson2MessageConverter();
 		converter.setEncodingPropertyName("__encoding__");
@@ -65,7 +65,7 @@ public class MappingJackson2MessageConverterTests {
 
 
 	@Test
-	public void toBytesMessage() throws Exception {
+	void toBytesMessage() throws Exception {
 		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Date toBeMarshalled = new Date();
 
@@ -79,7 +79,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void fromBytesMessage() throws Exception {
+	void fromBytesMessage() throws Exception {
 		BytesMessage bytesMessageMock = mock(BytesMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -88,21 +88,16 @@ public class MappingJackson2MessageConverterTests {
 
 		given(bytesMessageMock.getStringProperty("__typeid__")).willReturn(Object.class.getName());
 		given(bytesMessageMock.propertyExists("__encoding__")).willReturn(false);
-		given(bytesMessageMock.getBodyLength()).willReturn(new Long(bytes.length));
+		given(bytesMessageMock.getBodyLength()).willReturn(Long.valueOf(bytes.length));
 		given(bytesMessageMock.readBytes(any(byte[].class))).willAnswer(
-				new Answer<Integer>() {
-					@Override
-					public Integer answer(InvocationOnMock invocation) throws Throwable {
-						return byteStream.read((byte[]) invocation.getArguments()[0]);
-					}
-				});
+				(Answer<Integer>) invocation -> byteStream.read((byte[]) invocation.getArguments()[0]));
 
 		Object result = converter.fromMessage(bytesMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void toTextMessageWithObject() throws Exception {
+	void toTextMessageWithObject() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Date toBeMarshalled = new Date();
@@ -114,7 +109,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithMap() throws Exception {
+	void toTextMessageWithMap() throws Exception {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> toBeMarshalled = new HashMap<>();
@@ -127,7 +122,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void fromTextMessage() throws Exception {
+	void fromTextMessage() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
@@ -136,11 +131,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageWithUnknownProperty() throws Exception {
+	void fromTextMessageWithUnknownProperty() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		MyBean unmarshalled = new MyBean("bar");
 
@@ -149,11 +144,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		MyBean result = (MyBean)converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageAsObject() throws Exception {
+	void fromTextMessageAsObject() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -162,11 +157,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void fromTextMessageAsMap() throws Exception {
+	void fromTextMessageAsMap() throws Exception {
 		TextMessage textMessageMock = mock(TextMessage.class);
 		Map<String, String> unmarshalled = Collections.singletonMap("foo", "bar");
 
@@ -175,11 +170,11 @@ public class MappingJackson2MessageConverterTests {
 		given(textMessageMock.getText()).willReturn(text);
 
 		Object result = converter.fromMessage(textMessageMock);
-		assertEquals("Invalid result", result, unmarshalled);
+		assertThat(unmarshalled).as("Invalid result").isEqualTo(result);
 	}
 
 	@Test
-	public void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
+	void toTextMessageWithReturnType() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("summary");
 		MethodParameter returnType = new MethodParameter(method, -1);
 		testToTextMessageWithReturnType(returnType);
@@ -187,13 +182,13 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
+	void toTextMessageWithNullReturnType() throws JMSException, NoSuchMethodException {
 		testToTextMessageWithReturnType(null);
 		verify(sessionMock).createTextMessage("{\"name\":\"test\",\"description\":\"lengthy description\"}");
 	}
 
 	@Test
-	public void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
+	void toTextMessageWithReturnTypeAndNoJsonView() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("none");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
@@ -202,12 +197,12 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
+	void toTextMessageWithReturnTypeAndMultipleJsonViews() throws JMSException, NoSuchMethodException {
 		Method method = this.getClass().getDeclaredMethod("invalid");
 		MethodParameter returnType = new MethodParameter(method, -1);
 
-		thrown.expect(IllegalArgumentException.class);
-		testToTextMessageWithReturnType(returnType);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				testToTextMessageWithReturnType(returnType));
 	}
 
 	private void testToTextMessageWithReturnType(MethodParameter returnType) throws JMSException, NoSuchMethodException {
@@ -221,7 +216,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithJsonViewClass() throws JMSException {
+	void toTextMessageWithJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 
@@ -235,7 +230,7 @@ public class MappingJackson2MessageConverterTests {
 	}
 
 	@Test
-	public void toTextMessageWithAnotherJsonViewClass() throws JMSException {
+	void toTextMessageWithAnotherJsonViewClass() throws JMSException {
 		converter.setTargetType(MessageType.TEXT);
 		TextMessage textMessageMock = mock(TextMessage.class);
 
@@ -263,7 +258,10 @@ public class MappingJackson2MessageConverterTests {
 		return new MyAnotherBean();
 	}
 
+
 	public static class MyBean {
+
+		private String foo;
 
 		public MyBean() {
 		}
@@ -271,8 +269,6 @@ public class MappingJackson2MessageConverterTests {
 		public MyBean(String foo) {
 			this.foo = foo;
 		}
-
-		private String foo;
 
 		public String getFoo() {
 			return foo;
@@ -290,13 +286,10 @@ public class MappingJackson2MessageConverterTests {
 			if (o == null || getClass() != o.getClass()) {
 				return false;
 			}
-
 			MyBean bean = (MyBean) o;
-
 			if (foo != null ? !foo.equals(bean.foo) : bean.foo != null) {
 				return false;
 			}
-
 			return true;
 		}
 
@@ -306,9 +299,13 @@ public class MappingJackson2MessageConverterTests {
 		}
 	}
 
-	private interface Summary {};
-	private interface Full extends Summary {};
 
+	private interface Summary {}
+
+	private interface Full extends Summary {}
+
+
+	@SuppressWarnings("unused")
 	private static class MyAnotherBean {
 
 		@JsonView(Summary.class)
