@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -19,17 +19,18 @@ package org.springframework.web.servlet.tags.form;
 import javax.servlet.jsp.JspException;
 import javax.servlet.jsp.tagext.Tag;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
 
 /**
  * @author Rob Harrop
  */
-public class HiddenInputTagTests extends AbstractFormTagTests {
+class HiddenInputTagTests extends AbstractFormTagTests {
 
 	private HiddenInputTag tag;
 
@@ -48,10 +49,10 @@ public class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void render() throws Exception {
+	void render() throws Exception {
 		this.tag.setPath("name");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 
@@ -64,14 +65,14 @@ public class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withCustomBinder() throws Exception {
+	void withCustomBinder() throws Exception {
 		this.tag.setPath("myFloat");
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
 		errors.getPropertyAccessor().registerCustomEditor(Float.class, new SimpleFloatEditor());
 		exposeBindingResult(errors);
 
-		assertEquals(Tag.SKIP_BODY, this.tag.doStartTag());
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 
@@ -83,18 +84,14 @@ public class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void dynamicTypeAttribute() throws JspException {
-		try {
-			this.tag.setDynamicAttribute(null, "type", "email");
-			fail("Expected exception");
-		}
-		catch (IllegalArgumentException e) {
-			assertEquals("Attribute type=\"email\" is not allowed", e.getMessage());
-		}
+	void dynamicTypeAttribute() throws JspException {
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				this.tag.setDynamicAttribute(null, "type", "email"))
+			.withMessage("Attribute type=\"email\" is not allowed");
 	}
 
 	@Test
-	public void disabledTrue() throws Exception {
+	void disabledTrue() throws Exception {
 		this.tag.setDisabled(true);
 
 		this.tag.doStartTag();
@@ -110,7 +107,7 @@ public class HiddenInputTagTests extends AbstractFormTagTests {
 	// SPR-8661
 
 	@Test
-	public void disabledFalse() throws Exception {
+	void disabledFalse() throws Exception {
 		this.tag.setDisabled(false);
 
 		this.tag.doStartTag();
@@ -124,18 +121,18 @@ public class HiddenInputTagTests extends AbstractFormTagTests {
 	}
 
 	private void assertTagClosed(String output) {
-		assertTrue(output.endsWith("/>"));
+		assertThat(output.endsWith("/>")).isTrue();
 	}
 
 	private void assertTagOpened(String output) {
-		assertTrue(output.startsWith("<input "));
+		assertThat(output.startsWith("<input ")).isTrue();
 	}
 
 	@Override
 	protected TestBean createTestBean() {
 		this.bean = new TestBean();
 		bean.setName("Sally Greenwood");
-		bean.setMyFloat(new Float("12.34"));
+		bean.setMyFloat(Float.valueOf("12.34"));
 		return bean;
 	}
 
